@@ -1,6 +1,6 @@
-<div style="padding: 10px;">
+<div id="mapLegendPopup" style="padding: 10px;">
 	<div style="text-align: left; padding: 10px;">
-		<div style="float: left; width: 40%;">
+		<div style="float: left; width: 35%;">
 			<h3><u>Adding a wormhole signature</u></h3>
 			<div style="padding: 5px;">
 				If you add a WH signature, VIPPY can create a temporary unmapped wormhole.
@@ -32,95 +32,154 @@
 				</div>
 			</div>
 		</div>
-		<div style="float: right; width: 55%;">
+		<div style="float: right; width: 60%;">
 			<h3><u>Map Legend</u></h3>
+			<div style="float: left; width: 48%;">
+				<table>
+					<tr>
+						<td valign="top"><img src="images/default/wspace.link.png" /></td>
+						<td valign="top">This wormhole has not yet had its stability significantly disrupted.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/default/wspace.link.reduced.png" /></td>
+						<td valign="top">This wormhole has had its stability reduced, but not to a critical degree yet.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/default/wspace.link.crit.png" /></td>
+						<td valign="top">This wormhole has had its stability critically disrupted and is on the verge of collapse.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/default/gate.link.png" /></td>
+						<td valign="top">These systems are not connected via wormholes but through normal jump gates.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/default/wspace.link.eol.png" /></td>
+						<td valign="top">This wormhole is reaching the end of its natural lifetime.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/default/wspace.link.capital.png" /></td>
+						<td valign="top">Capitals are able to jump through this wormhole.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/default/wspace.link.frigate.png" /></td>
+						<td valign="top">Only Frigates and Destroyers can jump through this wormhole.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/default/kspace.link.png" /></td>
+						<td valign="top">This wormhole links 2 kspace systems. The number indicates the amount of regular gate jumps.</td>
+					</tr>
+				</table>
+			</div>
+			<div style="float: right; width: 48%;">
+				<table>
+					<tr>
+						<td valign="top"><img src="images/eve/star.png" /></td>
+						<td valign="top">I currently have a pilot in this system.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/station.png" /></td>
+						<td valign="top">This system has 1 or more stations.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/cyno.png" /></td>
+						<td valign="top">You have a registered capital ship in jump range of this system.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/stargate.red.png" /></td>
+						<td valign="top">This system is on a high-sec island!</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/stargate.green.png" /></td>
+						<td valign="top">This system has a direct gate to high-sec.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/fw.png" /></td>
+						<td valign="top">This is a Factional Warfare system.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/fw.contested.png" /></td>
+						<td valign="top">This system is contested.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/skull.red.png" /></td>
+						<td valign="top">This system has had PVP in the last 2 hours.</td>
+					</tr>
+					<tr>
+						<td valign="top"><img src="images/eve/skull.orange.png" /></td>
+						<td valign="top">This system has had PVE in the last 2 hours.</td>
+					</tr>
+					<tr>
+						<td colspan="2">
+							<u>Please note:</u>
+							<ul style="margin: 0px; padding: 0;">
+								<li>CCP has made kill info unavailable for wh-space.</li>
+								<li>Kill info is refreshed once every hour (<i>api limit</i>).</li>
+								<li>High-Sec systems are excluded.</li>
+							</ul>
+						</td>
+					</tr>
+				</table>
+			</div>
+			<div style="clear:both;"></div>
+		</div>
+		<div style="clear:both;"></div>
+
+		<br />
+		<div style="float: left; width: 35%;">
+			<h3><u>System Bar</u></h3>
+			<div style="padding: 10px;">
+				Gray system bars indicate whether or not a system requires scanning or scouting.<br />
+				If you are looking for something to do, start in systems with a bar!
+			</div>
 			<table>
 				<tr>
-					<td><img src="images/default/wspace.link.png" /></td>
-					<td>This wormhole has not yet had its stability significantly disrupted.</td>
+					<td valign="top"><img src="images/default/legend/greybar-full.png">&nbsp;&nbsp;</td>
+					<td valign="top">
+						<div><b><u>FULL BAR</u></b></div>
+						<div>This system has not been scanned.</div>
+					</td>
 				</tr>
 				<tr>
-					<td><img src="images/default/wspace.link.reduced.png" /></td>
-					<td>This wormhole has had its stability reduced, but not to a critical degree yet.</td>
-				</tr>
-				<tr>
-					<td><img src="images/default/wspace.link.crit.png" /></td>
-					<td>This wormhole has had its stability critically disrupted by the mass of numerous ships passing through and is on the verge of collapse.</td>
-				</tr>
-                <tr>
-                    <td><img src="images/default/gate.link.png" /></td>
-                    <td>These systems are not connected via wormholes but through normal jump gates.</td>
-                </tr>
-				<tr>
-					<td><img src="images/default/wspace.link.eol.png" /></td>
-					<td>This wormhole is reaching the end of its natural lifetime.</td>
-				</tr>
-				<tr>
-					<td><img src="images/default/wspace.link.capital.png" /></td>
-					<td>Capitals are able to jump through this wormhole.</td>
-				</tr>
-				<tr>
-					<td><img src="images/default/wspace.link.frigate.png" /></td>
-					<td>Only Frigates and Destroyers can jump through this wormhole.</td>
-				</tr>
-				<tr>
-					<td><img src="images/default/kspace.link.png" /></td>
-					<td>This wormhole links 2 kspace systems. The number indicates the amount of regular gate jumps.</td>
-				</tr>
-			</table>
-			<br />
-			<table>
-				<tr>
-					<td><img src="images/eve/star.png" /></td>
-					<td>I currently have a pilot in this system.</td>
-				</tr>
-				<tr>
-					<td><img src="images/eve/skull.red.png" /></td>
-					<td>This system has had PVP in the last 2 hours. &nbsp; (<i>HS systems are excluded!</i>)</td>
-				</tr>
-				<tr>
-					<td><img src="images/eve/skull.orange.png" /></td>
-					<td>This system has had PVE in the last 2 hours. &nbsp; (<i>HS systems are excluded!</i>)</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>
-                        <u>Please note:</u>
-                        <ul style="margin: 0px;">
-                            <li>CCP has made kill information unavailable for wormhole systems</li>
-                            <li>Kill information is refreshed once every hour (api limit)</li>
-                        </ul>
-                    </td>
-				</tr>
-				<tr>
-					<td><br /></td>
-				</tr>
-                <tr>
-                    <td><img src="images/eve/station.png" /></td>
-                    <td>This system has 1 or more stations.</td>
-                </tr>
-                <tr>
-                    <td><img src="images/eve/cyno.png" /></td>
-                    <td>You have a registered capital ship in jump range of this system.</td>
-                </tr>
-				<tr>
-					<td><img src="images/eve/stargate.red.png" /></td>
-					<td>This system is on a high-sec island!</td>
-				</tr>
-				<tr>
-					<td><img src="images/eve/stargate.green.png" /></td>
-					<td>This system has a direct gate to high-sec.</td>
-				</tr>
-				<tr>
-					<td><img src="images/eve/fw.png" /></td>
-					<td>This is a Factional Warfare system.</td>
-				</tr>
-				<tr>
-					<td><img src="images/eve/fw.contested.png" /></td>
-					<td>This system is contested.</td>
+					<td valign="top"><img src="images/default/legend/greybar-half.png">&nbsp;&nbsp;</td>
+					<td valign="top">
+						<div><b><u>HALF BAR</u></b></div>
+						<div>This system was scanned, but it was more then 2 hours ago. New things may have popped up!</div>
+					</td>
 				</tr>
 			</table>
 		</div>
-		<div style="clear:both;"></div>
+		<div style="float: right; width: 60%;">
+			<h3><u>System Outlines</u></h3>
+			<table>
+				<tr>
+					<td valign="top"><img src="images/default/legend/outline-blue.png">&nbsp;&nbsp;</td>
+					<td valign="top">
+						<div><b><u>BLUE OUTLINE</u></b></div>
+						<div>Home system<br />This system is a home system on the current, or other chain.</div>
+					</td>
+				</tr>
+				<tr>
+					<td valign="top"><img src="images/default/legend/outline-green.png">&nbsp;&nbsp;</td>
+					<td valign="top">
+						<div><b><u>GREEN OUTLINE</u></b></div>
+						<div>This system is clear.<br />Nothing has been seen in this system.</div>
+					</td>
+				</tr>
+				<tr>
+					<td valign="top"><img src="images/default/legend/outline-yellow.png">&nbsp;&nbsp;</td>
+					<td valign="top">
+						<div><b><u>YELLOW OUTLINE</u></b></div>
+						<div>This system is inhabited!<br />This system has people, but they seem to be AFK.</div>
+					</td>
+				</tr>
+				<tr>
+					<td valign="top"><img src="images/default/legend/outline-red.png">&nbsp;&nbsp;</td>
+					<td valign="top">
+						<div><b><u>RED OUTLINE</u></b></div>
+						<div>This system is active!<br />Be carefull. Active ships have been seen in this system.</div>
+					</td>
+				</tr>
+			</table>
+		</div>
 	</div>
 </div>
